Modif application.properties pour l'acces BDD

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=Spring_encheres
+
+spring.datasource.url=jdbc:sqlserver://10.170.200.10;databasename=Spring_Encheres;integratedSecurity=false;encrypt=false;trustServerCertificate=false
+spring.datasource.username=sa
+spring.datasource.password=Pa$$w0rd
