Pardon j'ai troll

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,63 @@
+# ==========================
+# Propriétés de l'application
+# ==========================
 spring.application.name=Spring_encheres
 
+# ==========================
+# Configuration de la base de données (SQL Server)
+# ==========================
 spring.datasource.url=jdbc:sqlserver://10.170.200.10;databasename=Spring_Encheres;integratedSecurity=false;encrypt=false;trustServerCertificate=false
 spring.datasource.username=sa
 spring.datasource.password=Pa$$w0rd
+
+# ==========================
+# Configuration Thymeleaf
+# ==========================
+# Chemin du préfixe pour les vues Thymeleaf
+spring.thymeleaf.prefix=classpath:/templates/
+# Suffixe des fichiers pour Thymeleaf
+spring.thymeleaf.suffix=.html
+# Définir que Thymeleaf doit gérer les fichiers HTML comme des vues
+spring.thymeleaf.mode=HTML
+# Désactivation du cache pour le développement (à activer en production)
+spring.thymeleaf.cache=false
+
+# ==========================
+# Propriétés de logging (log niveau)
+# ==========================
+# Pour ajuster le niveau de log, par exemple pour voir les erreurs ou les traces d'exécution
+logging.level.org.springframework=INFO
+logging.level.com.tonpackage=DEBUG
+
+# ==========================
+# Propriétés liées à la gestion des erreurs
+# ==========================
+# Page d'erreur personnalisée
+server.error.whitelabel.enabled=false
+# Affichage d'un message d'erreur personnalisé si le fichier index.html n'est pas trouvé
+server.error.path=/error
+
+# ==========================
+# Paramètres de port du serveur
+# ==========================
+# par défaut (8080)
+server.port=8080
+
+# ==========================
+# Paramètres supplémentaires de Spring MVC
+# ==========================
+# Pour que les pages HTML soient visibles en l'absence de suffixe
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+
+# ==========================
+# Paramètres de Session (si nécessaire)
+# ==========================
+# Pour configurer les cookies de session
+server.servlet.session.timeout=30m
+
+# ==========================
+# Profil Mode
+# ==========================
+spring.profiles.active=dev
+
